<resources>
    <string name="app_name">NotesAppKotlin</string>
    <string name="notes">My Notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="add_web_link">Add Web Link</string>
    <string name="delete_note">Delete Note</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="search">Search your notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>