<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="fill_parent">-->
<!--        -->
<!--    </androidx.core.widget.NestedScrollView>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorWhite" />

        <ImageView
            android:id="@+id/iv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tick"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/et_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@null"
            android:padding="@dimen/_10sdp"
            android:hint="@string/notes_title"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/_14ssp"
            android:inputType="text"
            android:fontFamily="@font/manrope3_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back" />

        <TextView
            android:id="@+id/tv_datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/_8ssp"
            android:fontFamily="@font/manrope3_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_note_title" />

        <LinearLayout
            android:id="@+id/layout_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_datetime">

            <View
                android:id="@+id/view_color"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/colorBlue"/>

            <EditText
                android:id="@+id/et_note_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:hint="@string/notes_sub_title"
                android:background="@null"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGray"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_10ssp"
                android:inputType="text"
                android:fontFamily="@font/manrope3_regular" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/layout_sub_title">

            <ImageView
                android:id="@+id/iv_note"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp" />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:visibility="gone"
                android:src="@drawable/ic_delete"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_web_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_image">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_note_web_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:hint="@string/web_url"
                    android:layout_weight="1"
                    android:text="http://"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorGray"
                    android:inputType="textMultiLine"
                    android:background="@null"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/manrope3_regular" />

                <ImageView
                    android:id="@+id/iv_web_delete"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:visibility="gone"
                    android:src="@drawable/ic_cancel"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="end">

                <Button
                    android:id="@+id/btn_cancel"
                    android:text="@string/cancel"
                    android:fontFamily="@font/manrope3_bold"
                    android:textSize="@dimen/_12ssp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"/>

                <Button
                    android:id="@+id/btn_oke"
                    android:text="@string/ok"
                    android:fontFamily="@font/manrope3_bold"
                    android:textSize="@dimen/_12ssp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_web_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:layout_weight="1"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            android:ellipsize="end"
            android:autoLink="web"
            android:visibility="gone"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/manrope3_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_web_url"/>

        <EditText
            android:id="@+id/et_note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:hint="@string/notes_desc"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGray"
            android:inputType="textMultiLine"
            android:background="@null"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/manrope3_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_web_link" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center"
                android:src="@drawable/img_bar"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
